--- a/backend/package.json
+++ b/backend/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon -r esm index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "esm": "^3.2.25",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
+    "mongodb": "^5.0.1",
     "pg": "^8.9.0"
   }
 }
