--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
       - backend
   backend:
     build: ./backend
+    restart: always
     working_dir: /app
     environment:
       - PORT=3000
-      - DB1_URL=postgresql://mestre:123456@db1:5432/db
-      - DB2_URL=postgresql://mestre:123456@db2:5432/db
+      - DB1_URI=postgresql://api:123987@db1:5432/db
+      - DB2_URI=mongodb://api:123987@db2:27017/
     ports:
       - 3000:3000
     volumes:
@@ -27,27 +28,23 @@ services:
     image: postgres:15
     restart: always
     environment:
-      - POSTGRES_USER=mestre
-      - POSTGRES_PASSWORD=123456
+      - POSTGRES_USER=api
+      - POSTGRES_PASSWORD=123987
       - POSTGRES_DB=db
-    # ports:
-    #   - 8001:5432
     volumes:
       - db_1:/var/lib/postgresql/data
-      - ./db1.sql:/docker-entrypoint-initdb.d/db1.sql
+      - ./postgres-init.sql:/docker-entrypoint-initdb.d/init.sql
 
   db2:
-    image: postgres:15
+    image: mongo:6
     restart: always
     environment:
-      - POSTGRES_USER=mestre
-      - POSTGRES_PASSWORD=123456
-      - POSTGRES_DB=db
-    # ports:
-    #   - 8002:5432
+      - MONGO_INITDB_ROOT_USERNAME=api
+      - MONGO_INITDB_ROOT_PASSWORD=123987
+      - MONGO_INITDB_DATABASE=db
     volumes:
-      - db_2:/var/lib/postgresql/data
-      - ./db2.sql:/docker-entrypoint-initdb.d/db2.sql
+      - db_2:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/init.js
 volumes:
   db_1:
   db_2:
